@@ -47,6 +47,8 @@ SEARCH_OPTIONS_LESS=search_options_less
 MAGNET=magnet
 LINK=link
 TWITTER=twitter
+FACEBOOK=facebook
+GOOGLEPLUS=googleplus
 COPY_PASTE=copy_paste
 SHARE=share
 SEND_HASH=share
